# python3-libspot

./: Dockerfile  Makefile  README.md  doxygen.conf  pylibspot.py  pyproject.toml  pyspot.i  pyspot.py  setup.py
bak/: doxy2swig.py  pyspot.i  pyspot.py  pyspot_wrap.cxx
debian/: README  changelog  control  debhelper-build-stamp  files  install  python3-libspot.postinst.debhelper  python3-libspot.prerm.debhelper  python3-libspot.substvars  rules
debian/python3-libspot/DEBIAN/: control  md5sums  postinst  prerm
debian/python3-libspot/usr/lib/python3/dist-packages/: pyspot.py
debian/python3-libspot/usr/share/doc/python3-libspot/: copyright
example/: example.py
tests/: test_pylibspot.py
